<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">灵犀教育</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lingxi">灵犀</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="pleaseusername">请输入用户名</string>
    <string name="pleasepassword">请输入密码</string>
    <string name="register">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="login">登录</string>
    <string name="title_activity_register">MainActivity</string>
    <string name="passwordagain">确认密码</string>
    <string name="firstgrade">一年级</string>
    <string name="secondgrade">二年级</string>
    <string name="thirdgrade">三年级</string>
    <string name="fourthgrade">四年级</string>
    <string name="returns">❀</string>
    <string name="ok">确定</string>
     <string name="dialog_read_from_dir">Open from dir</string>
    <string name="title_activity_findpassword">MainActivity</string>
    <string name="findpassword">找回密码</string>
    <string name="phonenumber">输入手机号</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="title_activity_findpassword2">MainActivity</string>
    <string name="newpassword">输入新密码</string>
    <string name="newpasswordagain">确认新密码</string>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="homepage">主页</string>
    <string name="luntan">论坛</string>
    <string name="ppt">课件</string>
    <string name="video">视频</string>
    <string name="pushinformation">推送消息</string>
    <string name="question">问题</string>
    <string name="answer">回答</string>
    <string name="title_activity_question">MainActivity</string>
    <string name="experience">经验分享</string>
    <string name="user1">用户1</string>
    <string name="user2">用户2</string>
    <string name="user3">用户3</string>
    <string name="user4">用户4</string>
    <string name="user5">用户5</string>
    <string name="send">发送</string>
    <string name="title_activity_ppt">MainActivity</string>
    <string name="keyword">输入关键字</string>
    <string name="search">搜索</string>
    <string name="grade">年级</string>
    <string name="subject">科目</string>
    <string name="image1">图片1</string>
    <string name="image2">图片2</string>
    <string name="image3">图片3</string>
    <string name="image4">图片4</string>
    <string name="title_activity_mine">MainActivity</string>
    <string name="myportrait">我的头像</string>
    <string name="myself">个人主页</string>
    <string name="basicinformation">基本资料</string>
    <string name="mycollection">我的收藏</string>
    <string name="notice">消息通知</string>
    <string name="feedback">意见反馈</string>
    <string name="feedbackok">提交反馈</string>
    <string name="exitnumber">退出账号</string>
    <string name="dayuhao">&gt;</string>
    <string name="title_activity_mine2">MainActivity</string>
    <string name="basicinformation2">基本资料</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="school">学校</string>
    <string name="major">专业</string>
    <string name="edits">编辑</string>
    <string name="reserves">保存</string>
    <string name="mycollection2">我的收藏</string>
    <string name="title_activity_mine4">MainActivity</string>
    <string name="set">本地设置</string>
    <string name="exit">注销</string>
    <string name="hot">热门</string>
    <string name="wenda">问答</string>
    <string name="grades">成绩</string>
    <string name="skill">技能</string>
    <string name="title_activity_mine3">MainActivity</string>
    <string name="title_activity_message">message</string>
    <string name="nohave">未填写</string>

    <string-array name="spin1">
        <item>语文</item>
        <item>数学</item>
        <item>英语</item>
        <item>物理</item>
        <item>化学</item>
        <item>生物</item>
        <item>政治</item>
        <item>历史</item>
        <item>地理</item>
    </string-array>
    <string-array name="spin2">
        <item>初中一年级</item>
        <item>初中二年级</item>
        <item>初中三年级</item>
        <item>高中一年级</item>
        <item>高中二年级</item>
        <item>高中三年级</item>
    </string-array>
    <string-array name="spin3">
        <item>浏览最多</item>
    </string-array>

    <string name="storage">存储路径</string>
    <string name="phonestorage">手机内部</string>
    <string name="sdcard">SD卡存储</string>
    <string name="zitidaxiao">字体大小</string>
    <string name="big">大</string>
    <string name="medium">中</string>
    <string name="small">小</string>
    <string name="title_activity_mine5">MainActivity</string>
    <string name="suggestionreflection2">意见反馈</string>
    <string name="yoursuggestion">请输入您的意见，谢谢合作</string>
    <string name="submits">提交</string>
    <string name="horizonline">水平线</string>
    <string name="title_activity_question2">MainActivity</string>
    <string name="question1">学生每天上课迟到怎么办</string>
    <string name="question2">学生上课睡觉怎么办</string>
    <string name="question3">实习教师与学生的如何正确相处</string>
    <string name="question4">如何处理学生之间的矛盾</string>
    <string name="question5">如何帮助学生提高成绩</string>
    <string name="answer1">老师与学生进行谈话</string>
    <string name="answer2">进行家访</string>
    <string name="answer3">开展守时班会，讲明其重要性</string>
    <string name="nickname">昵称</string>
    <string name="message">资讯</string>
    <string name="title_activity_b">B</string>
    <string name="title_activity_grade1">Grade1</string>
    <string name="title_activity_skill">Skill</string>
    <string name="title_activity_main0">Main0</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_artical">ArticalActivity</string>
    <string name="title_activity_articleitem">ArticleitemActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_message_web">MessageWebActivity</string>
    <string name="title_activity_skillgo">SkillgoActivity</string>
    <string name="title_activity_addarticle">AddarticleActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_Child">MainActivity</string>
    <string name="title_activity_video">VideoActivity</string>

</resources>
